# clibard

./: README.md  pyproject.toml
.task/: backlog.data  pending.data  undo.data
src/clibard/: README.md  clibard.py
