[tool.poetry]
name = "clibard"
version = "0.1.0"
description = "See all your notifications in the terminal"
authors = ["nojhan <nojhan@nojhan.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
faker = "^0.7.4"
humanize = "^4.11"
rich = "^13.9"
dbus-python = "^1.3"
PyGObject = "^3.50" # You may need to install the system package for libgirepository1.0-dev

